--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
       "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
       "start": "npm run build && NODE_ENV=production node ./dist/index.js",
       "build": "tsc",
-      "test": "set DEBUG=* && jest --verbose",
+      "test": "set DEBUG=* && jest --verbose --detectOpenHandles",
       "format": "npx prettier --write src/"
     },
     "author": "Mohamed Dounnani",
