--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "outDir": "./dist",
+    "rootDir": "./src",
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
     "target": "ES6",
@@ -18,7 +19,6 @@
   },
   "include": [
     "./src/**/*.ts",
-    "./test/**/*.ts"
   ],
   "exclude": [
     "node_modules",
